# api/openapi/auth/auth.yml
@@ -9,7 +9,7 @@ servers:
       hostname:
         default: localhost
 paths:
-  /api/auth/login:
+  /api/v1/auth/login:
       post:
         summary: Вход в аккаунт.
         operationId: login
@@ -34,7 +34,7 @@ paths:
                 schema:
                   $ref: '#/components/schemas/ErrorHTTP'
 
-  /api/auth/refresh:
+  /api/v1/auth/refresh:
       post:
         summary: Обновление access токена.
         operationId: refresh
@@ -55,7 +55,7 @@ paths:
                 schema:
                   $ref: '#/components/schemas/ErrorHTTP'
                   
-  /api/auth/logout:
+  /api/v1/auth/logout:
       post:
         summary: Выход из аккаунта.
         operationId: logout
